--- a/LandingPage.html
+++ b/LandingPage.html
@@ -145,12 +145,77 @@
     }
     .muted{color:var(--muted);font-size:13px}
     .price-row{display:flex;gap:8px;align-items:center}
+    .cart-sidebar{
+  position: fixed;
+  right: -380px;
+  top: 0;
+  width: 360px;
+  height: 100%;
+  background: white;
+  box-shadow: -4px 0 20px rgba(0,0,0,0.1);
+  z-index: 120;
+  padding: 20px;
+  display:flex;
+  flex-direction:column;
+  gap:18px;
+  transition: right 0.3s ease;
+}
+
+.cart-sidebar.open{
+  right: 0;
+}
+
+.cart-header{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.close-cart-btn{
+  background:none;
+  border:none;
+  font-size:22px;
+  cursor:pointer;
+}
+
+.cart-items{
+  flex:1;
+  overflow-y:auto;
+  padding-right:6px;
+}
+
+.cart-item{
+  display:flex;
+  gap:10px;
+  border-bottom:1px solid #eee;
+  padding-bottom:10px;
+  margin-bottom:10px;
+}
+
+.cart-item img{
+  width:60px;
+  height:60px;
+  object-fit:cover;
+  border-radius:8px;
+}
+
+.cart-footer{
+  border-top:1px solid #eee;
+  padding-top:12px;
+  font-size:16px;
+  font-weight:700;
+}
+
+.cart-total{
+  margin-bottom:10px;
+}
+
   </style>
 </head>
 <body>
   <header>
     <div class="container topbar">
-      <a href="#" class="logo" aria-label="Rexus Clone">
+      <a href="#" class="logo">
         <div class="mark">RX</div>
         <div>
           <div style="font-weight:800">Rexus</div>
@@ -168,14 +233,14 @@
       </nav>
 
       <div style="display:flex;gap:12px;align-items:center">
-        <div class="search" role="search">
+        <div class="search">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M21 21l-4.35-4.35" stroke="#9ca3af" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><circle cx="11" cy="11" r="6" stroke="#9ca3af" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
           <input id="searchInput" placeholder="Cari produk, misal: mouse, keyboard..." />
         </div>
 
         <div class="icons">
           <button class="btn btn-ghost" id="loginBtn">Login</button>
-          <button class="btn btn-ghost" id="cartBtn" title="Cart">
+          <button class="btn btn-ghost" id="cartBtn">
             Cart <span id="cartCount" class="cart-counter">0</span>
           </button>
         </div>
@@ -217,28 +282,28 @@
     </section>
   </main>
 
-  <div id="modal" class="modal" role="dialog" aria-hidden="true">
-    <button class="close-btn" id="modalClose" title="Tutup">&times;</button>
+  <div id="modal" class="modal" aria-hidden="true">
+    <button class="close-btn" id="modalClose">&times;</button>
     <div class="card">
       <img src="" alt="product" id="modalImg">
       <div style="flex:1;display:flex;flex-direction:column;gap:12px">
         <div style="display:flex;justify-content:space-between;align-items:flex-start">
           <div>
-            <h3 id="modalTitle" style="margin:0"></h3>
-            <div class="muted" id="modalSku" style="margin-top:6px"></div>
+            <h3 id="modalTitle"></h3>
+            <div class="muted" id="modalSku"></div>
           </div>
           <div style="text-align:right">
             <div class="badge" id="modalBadge">NEW</div>
-            <div class="muted" style="margin-top:8px">Stok: <strong id="modalStock">10</strong></div>
+            <div class="muted">Stok: <strong id="modalStock">10</strong></div>
           </div>
         </div>
 
         <div class="price-row">
-          <div class="price" id="modalPrice" style="font-size:22px;font-weight:900"></div>
-          <div class="old" id="modalOld" style="font-size:14px"></div>
+          <div class="price" id="modalPrice"></div>
+          <div class="old" id="modalOld"></div>
         </div>
 
-        <p id="modalDesc" class="muted">Deskripsi singkat produk akan ditampilkan di sini.</p>
+        <p id="modalDesc" class="muted"></p>
 
         <div style="margin-top:auto;display:flex;gap:12px">
           <button class="btn btn-primary" id="addCartModal">Tambahkan ke Keranjang</button>
@@ -248,133 +313,22 @@
     </div>
   </div>
 
-  <script>
-    const products = [
-      { id:1, title:"Rexus ShagaX RX130 Mouse Gaming Wireless", price:349000, old:529000, img:"https://picsum.photos/seed/m1/600/400", badge:"NEW", sku:"RX130" },
-      { id:2, title:"Rexus TWS NA-12 Stitch Edition Earphone", price:359000, old:509000, img:"https://picsum.photos/seed/m2/600/400", badge:"HOT", sku:"NA12" },
-      { id:3, title:"Rexus Aether Keyboard Gaming Mechanical", price:599000, old:993000, img:"https://picsum.photos/seed/m3/600/400", badge:"BEST", sku:"AETHER" },
-      { id:4, title:"Rexus Flow QZ30 Mouse Office Wireless", price:449000, old:649000, img:"https://picsum.photos/seed/m4/600/400", badge:"SALE", sku:"QZ30" },
-      { id:5, title:"Rexus Marvel Bundle 01 - Gamepad + Mouse + Pad", price:1110000, old:1520000, img:"https://picsum.photos/seed/m5/600/400", badge:"BUNDLE", sku:"BNDL01" },
-      { id:6, title:"Rexus Q-Pix Bundle 01 - Mouse + Mousepad", price:90000, old:147500, img:"https://picsum.photos/seed/m6/600/400", badge:"DEAL", sku:"QPIX1" },
-      { id:7, title:"REXUS BUNDLE BTS 01 - Keyboard + Keycaps", price:429000, old:699000, img:"https://picsum.photos/seed/m7/600/400", badge:"LIMITED", sku:"BTS01" },
-      { id:8, title:"Rexus Workfit Bundle - Kursi & Meja", price:2949000, old:5378000, img:"https://picsum.photos/seed/m8/600/400", badge:"WORK", sku:"WF01" },
-    ];
+<div id="cartSidebar" class="cart-sidebar">
+  <div class="cart-header">
+    <h3>Keranjang</h3>
+    <button id="closeCart" class="close-cart-btn">&times;</button>
+  </div>
 
-    const grid = document.getElementById('productGrid');
-    const cartCountEl = document.getElementById('cartCount');
-    let cartCount = 0;
+  <div id="cartItems" class="cart-items"></div>
 
-    function formatRupiah(n){
-      return 'Rp ' + n.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ".");
-    }
+  <div class="cart-footer">
+    <div class="cart-total">
+      Total: <strong id="cartTotal">Rp 0</strong>
+    </div>
+    <button class="btn btn-primary" style="width:100%">Checkout</button>
+  </div>
+</div>
 
-    function renderProducts(list){
-      grid.innerHTML = '';
-      list.forEach(p=>{
-        const card = document.createElement('div');
-        card.className = 'product';
-        card.innerHTML = `
-          <div style="position:relative">
-            <img loading="lazy" src="${p.img}" alt="${p.title}">
-            <div style="position:absolute;left:10px;top:10px">
-              <span class="badge">${p.badge}</span>
-            </div>
-          </div>
-          <div>
-            <div class="title">${p.title}</div>
-            <div class="muted" style="margin-top:6px">${p.sku}</div>
-            <div class="meta">
-              <div>
-                <div class="price">${formatRupiah(p.price)}</div>
-                <div class="old">${formatRupiah(p.old)}</div>
-              </div>
-              <div style="display:flex;flex-direction:column;gap:8px">
-                <button class="btn btn-primary" data-id="${p.id}" aria-label="Tambah ke cart">Add</button>
-                <button class="btn btn-ghost" data-quick="${p.id}">Quick</button>
-              </div>
-            </div>
-          </div>`;
-        grid.appendChild(card);
-      });
-
-      document.querySelectorAll('.btn-primary').forEach(btn=>{
-        btn.onclick = (e)=>{ addToCart(+e.currentTarget.dataset.id); }
-      });
-      document.querySelectorAll('[data-quick]').forEach(btn=>{
-        btn.onclick = (e)=>{ openModal(+e.currentTarget.dataset.quick); }
-      });
-    }
-
-    function addToCart(id){
-      cartCount++;
-      cartCountEl.textContent = cartCount;
-      cartCountEl.animate([{transform:'scale(1)'},{transform:'scale(1.25)'},{transform:'scale(1)'}],{duration:300});
-    }
-
-    const searchInput = document.getElementById('searchInput');
-    searchInput.addEventListener('input', (e)=>{
-      const q = e.target.value.trim().toLowerCase();
-      const filtered = products.filter(p=> p.title.toLowerCase().includes(q) || p.sku.toLowerCase().includes(q));
-      renderProducts(filtered);
-    });
-
-    const modal = document.getElementById('modal');
-    const modalImg = document.getElementById('modalImg');
-    const modalTitle = document.getElementById('modalTitle');
-    const modalPrice = document.getElementById('modalPrice');
-    const modalOld = document.getElementById('modalOld');
-    const modalDesc = document.getElementById('modalDesc');
-    const modalStock = document.getElementById('modalStock');
-    const modalBadge = document.getElementById('modalBadge');
-    let activeProduct = null;
-
-    function openModal(id){
-      const p = products.find(x=>x.id===id);
-      if(!p) return;
-      activeProduct = p;
-      modalImg.src = p.img;
-      modalTitle.textContent = p.title;
-      modalPrice.textContent = formatRupiah(p.price);
-      modalOld.textContent = formatRupiah(p.old);
-      modalDesc.textContent = `Deskripsi singkat untuk ${p.title}. Fitur unggulan: kualitas build, performa, dan garansi resmi.`;
-      modalStock.textContent = 20;
-      modalBadge.textContent = p.badge;
-      modal.style.display = 'flex';
-      modal.setAttribute('aria-hidden','false');
-    }
-    function closeModal(){ modal.style.display = 'none'; modal.setAttribute('aria-hidden','true'); }
-    document.getElementById('modalClose').onclick = closeModal;
-    modal.addEventListener('click', (e)=>{ if(e.target === modal) closeModal(); });
-    document.getElementById('addCartModal').onclick = ()=>{ if(activeProduct) addToCart(activeProduct.id); };
-
-    const carouselImg = document.getElementById('carouselImg');
-    const carouselImages = [
-      "https://picsum.photos/seed/hero1/1200/600",
-      "https://picsum.photos/seed/hero2/1200/600",
-      "https://picsum.photos/seed/hero3/1200/600"
-    ];
-    let carouselIndex = 0;
-    function nextCarousel(){
-      carouselIndex = (carouselIndex + 1) % carouselImages.length;
-      carouselImg.style.opacity = 0;
-      setTimeout(()=>{ carouselImg.src = carouselImages[carouselIndex]; carouselImg.style.opacity = 1; }, 220);
-    }
-    setInterval(nextCarousel, 4500);
-
-    renderProducts(products);
-
-    document.addEventListener('keydown', (e)=>{
-      if(e.key === 'Escape') closeModal();
-      if(e.key === '/' ) { e.preventDefault(); searchInput.focus(); }
-    });
-
-    document.querySelector('.logo').addEventListener('click', (ev)=>{ ev.preventDefault(); window.scrollTo({top:0,behavior:'smooth'}); });
-  </script>
+  <script src="javascriptes.js"></script>
 </body>
 </html>
-asjffafds
-sadfkjhsaf
-Ini tests yang kedua juga
-Ini punya nopal
-ini nopal 2
-rrrrrrrr
