--- a/LandingPage.html
+++ b/LandingPage.html
@@ -328,6 +328,11 @@
     <button class="btn btn-primary" style="width:100%">Checkout</button>
   </div>
 </div>
+<div>
+  <footer style="background-color: #c11;padding: 5px;">
+    <h1 style="text-align: center;color:#ffff;">Thank You</h1>    
+  </footer>
+</div>
 
   <script src="javascriptUAS.js"></script>
 </body>
