--- a/LandingPage.html
+++ b/LandingPage.html
@@ -330,7 +330,7 @@
 </div>
 <div>
   <footer style="background-color: #c11;padding: 5px;">
-    <h1 style="text-align: center;color:#ffff;">Thank You</h1>    
+    <h1 style="text-align: center;color:#ffff;">Isian</h1>    
   </footer>
 </div>
 
